Don't trust .desktop files in .gnome2

gnome-panel no longer stores files there.

https://bugzilla.gnome.org/show_bug.cgi?id=646584